<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="notifyTitle">Notify</string>
    <string name="notifyMsg">Permission</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="activity_hello_world">App/Activity/HelloWord</string>
    <string name="hello_world">Hello, world!</string>

    <string name="activity_camera_preview">Camera/Preview</string>

    <string name="activity_mock_audio_call">Audio/MockAudioCall</string>
    <string name="bluetooth_state">BT state:</string>
    <string name="force_sco_on">Force SCO On:</string>
    <string name="voice_dialer">Voice Dialer:</string>
    <string name="audio_mode">Audio mode:</string>
    <string name="stream_type">Stream type:</string>
    <string name="audio_track">Audio track</string>
    <string name="audio_recorder">Audio recorder</string>

</resources>
